# TP1_Reseau

./: CMakeLists.txt  README.md
includes/: CMakeLists.txt
includes/TP1_Reseau_Sockets/: CMakeLists.txt
includes/TP2_Reseau_Serialization/: CMakeLists.txt
includes/UQACNetwork/: .gitignore  CMakeLists.txt  README.md
includes/UQACNetwork/examples/: CMakeLists.txt
includes/UQACNetwork/examples/basic/: CMakeLists.txt  main.cpp
includes/UQACNetwork/main/: CMakeLists.txt
includes/UQACNetwork/main/include/UQACNetwork/: Connection.hpp  Terminal.hpp  config.hpp  framework.hpp  uqacNetwork.hpp
includes/UQACNetwork/main/src/: Connection.cpp  Terminal.cpp  uqacNetwork.cpp
libReplication/: ClassRegistry.cpp  ClassRegistry.h  LinkingContext.cpp  LinkingContext.h  ReplicationManager.cpp  ReplicationManager.h  mainClient.cpp  mainServer.cpp
libReplication/include/: ClassRegistry.h  LinkingContext.h  ReplicationManager.h
libReplication/src/: ClassRegistry.cpp  LinkingContext.cpp  ReplicationManager.cpp  main.cpp
libSerializer/: Compressor.cpp  Compressor.h  Deserializer.cpp  Deserializer.h  Player.cpp  Player.h  Serializer.cpp  Serializer.h  framework.cpp  framework.h  mainSerialization.cpp
src/: Connection.cpp  Connection.h  Network.cpp  Network.h  SocketManager.cpp  SocketManager.h  TCPConnection.cpp  TCPConnection.h  Terminal.cpp  Terminal.h  UDPConnection.cpp  UDPConnection.h  client.cpp  client.h  main.cpp  mainClient.cpp  mainServer.cpp  server.cpp  server.h
utils/: Enemy.cpp  Enemy.h  NetworkObject.cpp  NetworkObject.h  Player.cpp  Player.h  PlayerTP3.cpp  PlayerTP3.h  framework.h  frameworkTP3.cpp  frameworkTP3.h
